# web_file_exchanger

./: .gitgnore  Cargo.toml  README.md  server_conf.sh
documentation/: README.md  sequencediagram.dia
file_store/: README.md
html_test_frontend/: file_browser_component.js  http_operation.js  index.html  index.js  login_component.js  search_result_component.js  style.css
src/: ctx.rs  lib.rs  log.rs  main.rs  server_state.rs
src/backend/: mod.rs
src/config/: mod.rs
src/database/: mod.rs  test_db.rs
src/database_interface/: mod.rs
src/file_indexer/: mod.rs
src/middleware/: ctx_extractor.rs  ctx_resolver.rs  ip_limitter.rs  jwt_auth.rs  mod.rs  resource_mapper.rs
src/models/: error.rs  folder_structure.rs  fs_cmd.rs  login.rs  mod.rs  token.rs  user_login.rs
src/routers/: files.rs  info.rs  login.rs  mod.rs  static_web_page.rs
tests/: getpost_helper.rs  test_deny_expired_token.rs
