[package]
name = "web_file_exchanger"
version = "1.0.0"
authors = ["MajorX234 <majorx234@googlemail.com>"]
edition = "2021"

[lib]
name = "web_file_exchanger"
path = "src/lib.rs"

[[bin]]
name = "web_file_exchanger_server"
path = "src/main.rs"

[dependencies]
axum = {version = "0.6.18", features = ["headers", "multipart"]}
serde = { version = "1.0.167", features = ["derive"] }
serde_json = { version = "1.0.100" }
tokio = { version = "1.29.1", features = ["full"] }
tracing = { version = "0.1.37"}
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tower-http = { version = "0.4.1", features = ["fs"] }
chrono = { version = "0.4.26" }
jsonwebtoken = { version = "8.3.0" }
# getpost_helper
anyhow = { version = "1.0.71"}
httpc-test = { version = "0.1.4" }
reqwest = { version = "0.11.18" }
http = { version = "0.2.9"}
futures-util = { version = "0.3.28" }
