[package]
name = "web_file_exchanger"
version = "0.2.0"
authors = ["MajorX234 <majorx234@googlemail.com>"]
edition = "2021"

[lib]
name = "web_file_exchanger"
path = "src/lib.rs"

[[bin]]
name = "web_file_exchanger_server"
path = "src/main.rs"

[dependencies]
axum = {version = "0.6.18", features = ["headers", "multipart"]}
axum-client-ip = { version = "0.4.1" }
axum-extra = { version = "0.8.0" }
serde = { version = "1.0.167", features = ["derive"] }
serde_json = { version = "1.0.100" }
serde_with = { version = "3.1.0" }
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.8" }
tracing = { version = "0.1.37"}
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.4.1", features = ["fs","trace"] }
chrono = { version = "0.4.26" }
jsonwebtoken = { version = "8.3.0" }
async-trait = { version = "0.1.71"}
strum_macros = { version = "0.25.1"}
uuid = { version = "1.4.0", features = ["v4"]}
http = { version = "0.2.9"}
futures-util = { version = "0.3.28" }
mime_guess = { version = "2.0.4" }
[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }
rstest = "0.16"
mockall = "0.11"
# getpost_helper
anyhow = { version = "1.0.71"}
httpc-test = { version = "0.1.5" }
reqwest = { version = "0.11.18" }
